--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="F:/Users/Bernd/Onedrive/Schule/SEW/Jars/byte-buddy-1.3.15.jar"/>
+	<classpathentry kind="lib" path="F:/Users/Bernd/Onedrive/Schule/SEW/Jars/mockito-core-2.0.49-beta.jar"/>
+	<classpathentry kind="lib" path="F:/Users/Bernd/Onedrive/Schule/SEW/Jars/objenesis-2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Harald/OneDrive/Schule/SEW/Jars/byte-buddy-1.3.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Harald/OneDrive/Schule/SEW/Jars/mockito-core-2.0.49-beta.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Harald/OneDrive/Schule/SEW/Jars/objenesis-2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
